// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`set-vars command set-vars fails if no flags are set 1`] = `
"The following errors occurred:
  [2mMissing required flag organization[22m
[2m  Missing required flag repositories[22m
[2m  Missing required flag secrets[22m
See more help with --help"
`;

exports[`set-vars command set-vars fails if org flags are set 1`] = `
"The following errors occurred:
  [2mMissing required flag repositories[22m
[2m  Missing required flag secrets[22m
See more help with --help"
`;

exports[`set-vars command set-vars fails if org,repo flags are set 1`] = `
"The following error occurred:
  [2mMissing required flag secrets[22m
See more help with --help"
`;
